--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "nodemailer": "^6.4.6"
+    "nodemailer": "^6.4.6",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.5"
   }
 }
