--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "author": "Luis Pires",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.696.0",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "mysql": "^2.18.1",
     "nodemailer": "^6.4.6",
     "request": "^2.88.2",
