--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
+    "mustache-express": "^1.3.0",
     "mysql": "^2.18.1",
     "nodemailer": "^6.4.6",
     "request": "^2.88.2",
