--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mustache-express": "^1.3.0",
     "mysql": "^2.18.1",
     "nodemailer": "^6.5.0",
+    "nodemon": "^2.0.7",
     "request": "^2.88.2",
     "request-promise": "^4.2.6"
   }
